order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: flash-sale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: docer.io/order-service:latest
          ports:
            - containerPort: 8700
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8700
            initialDelaySeconds: 5
            periodSeconds: 20
