order-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: flash-sale
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8700
      targetPort: 8700
  type: ClusterIP
